Multiple UI changes: dialog border added & its close button size increased, padding added to buttons to stop them meeting with the edge of the screen, slowed down the news ticker text, and enlarged it to remove bluring, slightly increased the size of the text on the controls. Centering of header on desktop and start/save controls on mobile.

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,13 @@ button {
   font-family: 'PixelifySans-Bold';
   padding: 1rem;
   cursor: pointer;
+  font-size: 1rem;
  }
 
 header {
   margin: 0.2rem;
   padding: 0.2rem;
+  text-align: center;
  }
 
  canvas{
@@ -36,6 +38,7 @@ header {
   display: grid;
   grid-template-columns: auto auto auto auto;
   flex-wrap: wrap;
+  padding: 1rem;
  }
 
 #button-container button {
@@ -45,6 +48,7 @@ header {
 .game-status{
   display: flex;
   grid-template-columns: wrap;
+  padding: 1.5rem;
 }
 
 #days-elapsed-text{
@@ -66,10 +70,12 @@ header {
   width: 100%;
   height: 3rem;
   overflow: hidden;
+  font-size: 1.4rem;
+  font-weight: 1.25rem;
 }
 
 #economic-status-message {
-  animation: moveText 10s linear infinite;
+  animation: moveText 20s linear infinite;
   white-space: nowrap;
 }
 
@@ -105,17 +111,21 @@ dialog {
   padding: 20px;
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
+  border-color: darkgray;
+  border-radius: 1.25rem;
+  border-width: 0.4rem;
 }
 
 .dialog-close-button {
   position: absolute;
-  top: 0.1rem;
-  right: 0.1rem;
+  top: 0.05rem;
+  right: 0.25rem;
   background: none;
   border: none;
-  font-size: 2rem;
+  font-size: 3rem;
   cursor: pointer;
-  padding:0.1rem;
+  padding: 0.25rem;
 }
 
 #tooltip {
@@ -159,6 +169,7 @@ dialog {
         margin: 0;
         box-sizing: border-box;
         scale: 99%;
+        text-align: center;
     }
 
     .game-container {
